# CGF1

./: CGF1.cpp  CGF1.h  CMakeLists.txt  README.md  blue_square.cpp  red_triangle.cpp
